--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <script defer src="main.js"></script>
     <title>Todos</title>
 </head>
-<body>
+<body class="bg-success">
+    <div class="container ">
+        <div class="row my-5">
+            <h1 class="mx-auto text-center">To Do's</h1>
+        </div>
+        <div class="row mx-2">
+            <input id="task-input" type="text" class="form-control" placeholder="Add task..."/>
+            <button type="button" class="btn btn-primary mt-1">ADD</button>
+        </div>
+    </div>
 </body>
 </html>
