--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body class="bg-success">
     <div class="container ">
-        <div class="row my-5">
-            <h1 class="mx-auto text-center">To Do's</h1>
-        </div>
-        <div class="row mx-2">
-            <input id="task-input" type="text" class="form-control" placeholder="Add task..."/>
-            <button type="button" class="btn btn-primary mt-1">ADD</button>
-        </div>
+        <!-- create a form for adding new tasks -->
+        <form id="add-task-form">
+            <input type="text" id="new-task" placeholder="Enter a new task" />
+            <button type="submit">Add Task</button>
+        </form>
+
+        <div id="task-list"></div>
     </div>
 </body>
 </html>
