--- a/index.html
+++ b/index.html
@@ -4,21 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles.css">
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="main.js"></script>
     <title>Todos</title>
 </head>
-<body class="bg-success">
-    <div class="container ">
-        <!-- create a form for adding new tasks -->
-        <form id="add-task-form">
-            <input type="text" id="new-task" placeholder="Enter a new task" />
-            <button type="submit">Add Task</button>
-        </form>
+<body>
+    <!-- Create a container for the app layout -->
+<div class="container">
 
-        <div id="task-list"></div>
+    <!-- Add a container with the sticky-top class -->
+    <div class="container sticky-top behind-container bg-primary text-white border border-5 border-secondary mt-4 py-3">
+        <!-- Add a title -->
+        <h1 class="text-center">My Mobile App</h1>
+    
+        <!-- Create a row for the input and button -->
+        <div class="row mt-4">
+            <!-- create a form for adding new tasks -->
+            <form id="add-task-form" class="d-flex justify-content-around">
+                <input type="text" id="new-task" placeholder="Enter a new task" />
+                <button type="submit">Add Task</button>
+            </form>
+        </div>
     </div>
+  
+    <div class="container top-container">
+        <!-- Add the task list container -->
+        <div id="task-list" class="row mt-4"></div>
+    </div>
+</div>
 </body>
 </html>
