--- a/index.html
+++ b/index.html
@@ -5,30 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script defer src="main.js"></script>
     <title>Todos</title>
 </head>
 <body>
     <!-- Create a container for the app layout -->
-<div class="container">
+<div class="container container-fluid m-0 p-0 background">
 
     <!-- Add a container with the sticky-top class -->
-    <div class="container sticky-top behind-container bg-primary text-white border border-5 border-secondary mt-4 py-3">
+    <div class="container sticky-top behind-containe bg-warning text-black py-3">
         <!-- Add a title -->
-        <h1 class="text-center">My Mobile App</h1>
+        <h1 class="text-center">JS Todos</h1>
     
         <!-- Create a row for the input and button -->
         <div class="row mt-4">
             <!-- create a form for adding new tasks -->
-            <form id="add-task-form" class="d-flex justify-content-around">
-                <input type="text" id="new-task" placeholder="Enter a new task" />
-                <button type="submit">Add Task</button>
+            <form class="input-group" id="add-task-form">
+                <input type="text" id="new-task" class="form-control" placeholder="Enter a new task" />
+                <button type="submit" class="btn btn-primary">Add Task</button>
             </form>
         </div>
     </div>
-  
+
     <div class="container top-container">
         <!-- Add the task list container -->
         <div id="task-list" class="row mt-4"></div>
